--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,10 @@ jobs:
         run: |
           git submodule init
           git submodule update
-          mkdir build && cd build && cmake ..
+          mkdir build
+          cd build
+          cmake .. -DTesting=ON
+          make
           source ./chiqvars.sh
           ctest -V
           python -m pytest -v
