--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,8 @@ jobs:
       - name: pip
         run: |
           python -m pip install -U pip
-          python -m pip install numpy scipy mpi4py
+          python -m pip install mpi4py
+          python -m pip install dcore
           python -m pip install more-itertools
           python -m pip install pytest
 
