--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,15 +30,13 @@ jobs:
       - name: apt
         run: |
           sudo apt update
-          sudo apt install libeigen3-dev openmpi-bin libopenmpi-dev
+          sudo apt install hdf5-tools libeigen3-dev openmpi-bin libopenmpi-dev
 
       - name: pip
         run: |
           python -m pip install -U pip
           python -m pip install mpi4py
-          python -m pip install dcore
-          python -m pip install more-itertools
-          python -m pip install pytest
+          python -m pip install dcore more-itertools pytest
 
       - name: run
         run: |
