--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
           python -m pip install -U pip
           python -m pip install mpi4py
           python -m pip install dcore more-itertools pytest
+          python -m pip freeze # for debugging
 
       - name: run
         run: |
