--- a/examples/square_bse_TNeel/bse.in
+++ b/examples/square_bse_TNeel/bse.in
@@ -1,13 +1,13 @@
-[bse_common]
+[chiq_common]
 input = "dmft_bse.h5"
 output = "dmft_bse.out.h5"
 type = ["chi0","bse"]
 omega_q = "q_path.dat"
 
-[bse_tool]
-work_dir = "work/bse_tool"
+[chiq_main]
+work_dir = "work/chiq"
 
-[bse_post]
+[chiq_post]
 output_dir = "bse"
 mode = ["eigen"]
 order = "overlap"
