--- a/tests/python/non-mpi/bsepost_linear_combination/bse.toml
+++ b/tests/python/non-mpi/bsepost_linear_combination/bse.toml
@@ -1,10 +1,10 @@
-[bse_common]
+[chiq_common]
 input = "dmft_bse.h5"
 type = ['chi0', 'bse']
 omega_q = "q_path.dat"
 
-[bse_tool]
+[chiq_main]
 
-[bse_post]
+[chiq_post]
 mode = ['linear_combination']
 coefs_file = "weight.in"
