--- a/tests/python/non-mpi/bsetool_SCL/bse.toml
+++ b/tests/python/non-mpi/bsetool_SCL/bse.toml
@@ -1,10 +1,10 @@
-[bse_common]
+[chiq_common]
 input = "dmft_bse.h5"
 type = ['scl']
 omega_q = "q_path.dat"
 
-[bse_tool]
+[chiq_main]
 
-[bse_post]
+[chiq_post]
 mode = ['eigen']
 order = 'file'
