--- a/examples/square_rpa/bse.in
+++ b/examples/square_rpa/bse.in
@@ -2,7 +2,7 @@
 input = "dmft_bse.h5"
 output = "dmft_bse.out.h5"
 type = ["chi0", "rpa"]  # "chi0", "bse", "scl", "rpa", "rrpa"
-omega_q = "q_path.dat"
+q_points = "q_path.dat"
 
 [chiq_main]
 work_dir = "work/chiq"
